--- a/network-imageview/src/main/res/values/colors.xml
+++ b/network-imageview/src/main/res/values/colors.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="network_image_view_loader_color">#52c7b8</color>
+    <color name="network_image_view_placeholder_color">#b2b2b2</color>
 </resources>
